@@ -160,6 +160,12 @@ b0dd95933247d9edd5724321f98d0304c220564dd12bca2c111ad4f901f91ae9  test/results/p
 dd27bb7344052ecbee15c4357bb90f4e302a84146d7e8d55df02f77b2dc38984  test/results/prefix_postfix.c-riscv32-binary
 dd1deec15d77171c5d09ece6a06234140fbb49a6461854ecca526275fe7b5f7f  test/results/prefix_postfix.c-riscv64-binary
 71971d8476496d2c6a669f872cbe668af855bb31bb75853c4dfe03b0be0cd576  test/results/prefix_postfix.c-x86-binary
+76f9cab9c7bdacb84721b97b471c3600c275e0fb88af3bb153c9d318f7cfc16a  test/results/preprocessor_spaces.c-aarch64-binary
+355c917b3f11136a2893fb4c1e09da2e3be12b82afa80f9eab00de5a0847ff51  test/results/preprocessor_spaces.c-amd64-binary
+ca5bec4c10bdf7b4d6c205c986d573dd7c95cac50f2349074862327081d02102  test/results/preprocessor_spaces.c-armv7l-binary
+5f6e5e1ef9434485b260df35add2109ac0c7678550aeb47fe742aabe8fad70c7  test/results/preprocessor_spaces.c-riscv32-binary
+750584f9bc8c41c5035a0502328be98788a1ff3458dfa768da4ac6ba67cbbc6e  test/results/preprocessor_spaces.c-riscv64-binary
+f88a4aa5cef7e7a61e20ed5de2d6f9867f90107dba56498cac729978bb88bab2  test/results/preprocessor_spaces.c-x86-binary
 3f741b3491184d7197be91687f1557914320a9a053ef1ea6c833d594e7a21273  test/results/static_variables.c-aarch64-binary
 742644d6f9c7eba8f657c1e87ad49984de98babae11df85c6d23c138b1448c8c  test/results/static_variables.c-amd64-binary
 19d9626ceefbd38460899d1468d6794dad6cdab920acd4da0f9847fd9dab65eb  test/results/static_variables.c-armv7l-binary
@@ -438,13 +444,13 @@ df94cf3bef8f8da5c22d30b26f78e917c22d71721b3da185a56e876c13a3e87d  test/results/t
 00e072d966cb07e65cda37ea352c0bc9891bdf8a8bba21d683007ada8bc246fe  test/results/test0106-riscv32-binary
 83a6029036e6be201153f5c7669ba0b2da570e2321d9f2ef175993231524206b  test/results/test0106-riscv64-binary
 6c34937fdeeb71acca7b8fbb5f7ba6bb4d0c189ee9395639ace92b5950d518a3  test/results/test0106-x86-binary
-6feef55b1e79b4775b754e128465607ae6f5b521e578811792a8dce1b8b0e9f1  test/results/test1000-aarch64-binary
-749da4bf91fa7b314a0d449a29dec899aa7ffd0cd958dd6774953e7fae8f9d0d  test/results/test1000-amd64-binary
-a29a841b1de0f1c31927e5eb001ddf4ec597b164e1a705f10a3378330b20fe09  test/results/test1000-armv7l-binary
-83bb60283b076ad004cd1a61344c1dd5beb236d63788b931a734ecbe3968afd9  test/results/test1000-knight-posix-binary
-fdda5f54b4f886c8d6a83620376277466ab634364da1c6221a3651aaf1dddefa  test/results/test1000-riscv32-binary
-9bdf507f43914a979c4de20f9d0778e30bfeca282368d76fef8fefeb295011c5  test/results/test1000-riscv64-binary
-51429fd0ae88216f54e009b04781e440a735fbbb2c4b99209787b40753f9d59c  test/results/test1000-x86-binary
+8818f9512dd560e5780b5877a15edec8287c7e857632bdc51f0d4216fc314455  test/results/test1000-aarch64-binary
+4e8c1f0817e15e545d95491bd97cd48c4d4d265b390c247242e750fdc768a0c9  test/results/test1000-amd64-binary
+12b57bcdbe9cbedcd94ce7a443be34ad541803e36872024c50283de5e2edfaf7  test/results/test1000-armv7l-binary
+64c7997c64deec72ef8d4a6429b9a7f10c215e195dbbbb00102b3a8906a0e93c  test/results/test1000-knight-posix-binary
+9036b739383f7c78795f760491ddd2be4fdbea2b44d23bceb35594f66317518e  test/results/test1000-riscv32-binary
+6105cd84031300c92994601c5c0d9425f85707bf4c18e219fa6cf0edac543f31  test/results/test1000-riscv64-binary
+b28bcd84e8aab19072028f372195489233403b084b2c3ff5bc3bd557bd5bc687  test/results/test1000-x86-binary
 5762a62fa777225e8cef41f48cc4e1010db7978a31d68868ca8e3f2ea73d41b3  test/results/variables.c-aarch64-binary
 e60a3c62aa7ded83a7eceac6961822f86001c751b6832f0ef8a3b12bd5be3039  test/results/variables.c-amd64-binary
 ac1298d6d1d8e4dd5eca046a654987b76ff339ae3124d314f2f3cb53be3cae5b  test/results/variables.c-armv7l-binary
