@@ -31,6 +31,7 @@ Added support for calling function pointers directly on global variables and str
 Added support for initializing global variables with negative values.
 Added support for declaring variables in for loops
 Added support for using includes with the `--expand-includes` CLI option. Note that including `stdio.h` changes the `M1` libc required from `libc-core.M1` to `libc-full.M1`.
+Added support for spaces between `#` and text in preprocessor commands.
 
 ** Changed
 Space for local variables in functions is now allocated up front
